--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:arthursiq5/Rocket.Q.git",
   "author": "Arthur Siqueira <arthur.siq5@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/server.js"
+  },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1"
